Implement user authentication features: Added Google OAuth login, password reset functionality, and user notifications. Updated dependencies in pom.xml and refactored security configuration. Introduced new DTOs for password management and notifications, along with corresponding service and controller classes.